# absente

./: LICENSE  README.md  absente.opam  dune-project
doc/: environment.md
src/: AbsEnv.ml  AbsEnv.mli  AbsPath.ml  AbsPath.mli  absente.ml  absente.mli  dune
